chore: Improve config options
Improve the configuration options:
* Switch from warn_404 to debug_status.
* Change default for retry_reset to 1 so a single processed message
  will reset the retry interval.

Also:
* Correct typos in docs.
* Order options in docs so they are easier to find.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -31,18 +31,27 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 [cols="<,<,<",options="header",]
 |=======================================================================
 |Setting |Input type|Required
+| <<plugins-{type}s-{plugin}-debug_status>> |<<array,array>>|No
 | <<plugins-{type}s-{plugin}-mode>> |<<string,string>>, one of `["client"]`|No
-| <<plugins-{type}s-{plugin}-url>> |<<string,string>>|Yes
 | <<plugins-{type}s-{plugin}-retry_initial>> |<<number,number>>|No
 | <<plugins-{type}s-{plugin}-retry_max>> |<<number,number>>|No
 | <<plugins-{type}s-{plugin}-retry_reset>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-warn_404>> |<<boolean,boolean>>|No
+| <<plugins-{type}s-{plugin}-url>> |<<string,string>>|Yes
 |=======================================================================
 
 Also see <<plugins-{type}s-{plugin}-common-options>> for a list of options supported by all
 input plugins.
 
 &nbsp;
+
+[id="plugins-{type}s-{plugin}-debug_status"]
+===== `debug_status`
+
+  * Value type is <<array,array>>
+  * Default value is `[404]`
+
+Logs responses with the given HTTP status codes as debug instead
+of warning.
 
 [id="plugins-{type}s-{plugin}-mode"]
 ===== `mode`
@@ -54,6 +63,34 @@ Select the plugin's mode of operation. Right now only client mode
 is supported, i.e. this plugin connects to a websocket server and
 receives events from the server as websocket messages.
 
+[id="plugins-{type}s-{plugin}-retry_initial"]
+===== `retry_initial`
+
+  * Value type is <<number,number>>
+  * Default value is `1`
+
+The retry interval in seconds connections start with.
+
+[id="plugins-{type}s-{plugin}-retry_max"]
+===== `retry_max`
+
+  * Value type is <<number,number>>
+  * Default value is `60`
+
+The maximum retry interval in seconds backoff will increase to.
+
+[id="plugins-{type}s-{plugin}-retry_reset"]
+===== `retry_reset`
+
+  * Value type is <<number,number>>
+  * Default value is `1`
+
+The number of log entries that have to be processed before
+the retry interval is reset to retry_initial. This allows
+connections to quickly recover from a small interruption
+after we have successfully connected and processed some
+entries.
+
 [id="plugins-{type}s-{plugin}-url"]
 ===== `url`
 
@@ -62,42 +99,6 @@ receives events from the server as websocket messages.
   * There is no default value for this setting.
 
 The URL to connect to.
-
-[id="plugins-{type}s-{plugin}-retry_initial"]
-===== `retry_initial`
-
-  * Value type is <<number,number>>
-  * Default values is `1`
-
-The retry interval connections start with.
-
-[id="plugins-{type}s-{plugin}-retry_max"]
-===== `retry_max`
-
-  * Value type is <<number,number>>
-  * Default values is `60`
-
-The maximum retry interval backoff will increase too.
-
-[id="plugins-{type}s-{plugin}-retry_reset"]
-===== `retry_reset`
-
-  * Value type is <<number,number>>
-  * Default values is `20`
-
-The number of log entries that have to be processed before
-the retry interval is reset to retry_initial. This allows
-connections to quickly recover from a small interruption
-after we have successfully connected and processed some
-entries.
-
-[id="plugins-{type}s-{plugin}-warn_404"]
-===== `warn_404`
-
-  * Value type is <<boolean,boolean>>
-  * Default values is `true`
-
-Logs 404 responses as warnings if true otherwise as debug.
 
 [id="plugins-{type}s-{plugin}-common-options"]
 include::{include_path}/{type}.asciidoc[]
