fix: userinfo cleanup
Fix userinfo cleanup which is nil not empty string when no user
credentials are present.

Also:
* Default debug_status to empty so users can easily detect invalid
  url configuration option.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -48,7 +48,7 @@ input plugins.
 ===== `debug_status`
 
   * Value type is <<array,array>>
-  * Default value is `[404]`
+  * Default value is `[]`
 
 Logs responses with the given HTTP status codes as debug instead
 of warning.
